migrate to lwjgl3